--- a/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/StackPanelDictionary.xaml
@@ -37,5 +37,12 @@
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Margin" Value="0 5 0 5"/>
     </Style>
-    
+
+    <Style x:Key="HorizontalDataStackPanel" TargetType="StackPanel"> <!--TextBlock доминирует над TextBox-->
+        <Setter Property="Orientation" Value="Horizontal"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="0 3.5 0 3.5"/>
+    </Style>
+
 </ResourceDictionary>
