--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ViewInformationWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ViewInformationWorkerPage.xaml
@@ -50,8 +50,8 @@
                 Style="{DynamicResource MainMenuToggleButtonStyle}"/>
         </StackPanel>
         <ScrollViewer Grid.Column="1">
-            <StackPanel x:Name="MainStackPanel" Margin="0 10 0 20" VerticalAlignment="Top" HorizontalAlignment="Center">
-                <Border Width="800" x:Name="PassportBorder" Style="{DynamicResource BorderInformation}" Margin="0 0 0 10">
+            <StackPanel Margin="0 10 0 10" VerticalAlignment="Top" HorizontalAlignment="Center">
+                <Border Visibility="Visible" Width="870" x:Name="PassportBorder" Style="{DynamicResource BorderInformation}" Margin="0 0 0 10">
                     <StackPanel Margin="0 10 0 10">
                         <TextBlock
                             Foreground="#462AD8"
@@ -61,7 +61,7 @@
                             Margin="0 10 0 10"/>
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="200"/>
+                                <ColumnDefinition Width="260"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Image
@@ -70,26 +70,11 @@
                                 Margin="10"
                                 x:Name="UserPhotoImage"
                                 Source="{Binding PassportTable.ImagePassportTable.Image_ImagePassport}"
-                                Width="180"
+                                Width="240"
                                 Stretch="Uniform"
-                                Height="240"/>
-                            <StackPanel Grid.Column="1" Margin="0 10 0 10" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
+                                Height="320"/>
+                            <StackPanel Grid.Column="1" Margin="10" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
                                 <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
-                                    <TextBlock 
-                                        VerticalAlignment="Top"
-                                        Margin="0 0 3.5 0"
-                                        Style="{DynamicResource MainStyleTextBlock}"
-                                        Text="Паспорт выдан:"/>
-                                    <TextBlock
-                                        Margin="3.5 0 0 0"
-                                        MinWidth="0"
-                                        Width="Auto"
-                                        MaxWidth="400"
-                                        TextWrapping="Wrap"
-                                        Style="{DynamicResource OtherStyleTextBlock}"
-                                        Text="{Binding PassportTable.Issued_Passport}"/>
-                                </StackPanel>
-                                <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
                                     <TextBlock 
                                         Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
@@ -133,36 +118,6 @@
                                     <TextBlock 
                                         Margin="0 0 3.5 0"
                                         Style="{DynamicResource MainStyleTextBlock}"
-                                        Text="Фамилия:"/>
-                                    <TextBlock
-                                        Margin="3.5 0 0 0"
-                                        Style="{DynamicResource OtherStyleTextBlock}"
-                                        Text="{Binding PassportTable.Surname_Passport}"/>
-                                </StackPanel>
-                                <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
-                                    <TextBlock 
-                                        Margin="0 0 3.5 0"
-                                        Style="{DynamicResource MainStyleTextBlock}"
-                                        Text="Имя:"/>
-                                    <TextBlock
-                                        Margin="3.5 0 0 0"
-                                        Style="{DynamicResource OtherStyleTextBlock}"
-                                        Text="{Binding PassportTable.Name_Passport}"/>
-                                </StackPanel>
-                                <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
-                                    <TextBlock 
-                                        Margin="0 0 3.5 0"
-                                        Style="{DynamicResource MainStyleTextBlock}"
-                                        Text="Отчество:"/>
-                                    <TextBlock
-                                        Margin="3.5 0 0 0"
-                                        Style="{DynamicResource OtherStyleTextBlock}"
-                                        Text="{Binding PassportTable.Middlename_Passport}"/>
-                                </StackPanel>
-                                <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
-                                    <TextBlock 
-                                        Margin="0 0 3.5 0"
-                                        Style="{DynamicResource MainStyleTextBlock}"
                                         Text="Пол:"/>
                                     <TextBlock
                                         Margin="3.5 0 0 0"
@@ -179,6 +134,66 @@
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.DateOfBrich_Passport, StringFormat='{}{0:dd/MM/yyyy}'}"/>
                                 </StackPanel>
+                                <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock 
+                                        VerticalAlignment="Top"
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Фамилия:"/>
+                                    <TextBlock
+                                        MinWidth="0"
+                                        Width="Auto"
+                                        MaxWidth="503"
+                                        TextWrapping="Wrap"
+                                        Margin="3.5 0 0 0"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PassportTable.Surname_Passport}"/>
+                                </StackPanel>
+                                <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock 
+                                        VerticalAlignment="Top"
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Имя:"/>
+                                    <TextBlock
+                                        MinWidth="0"
+                                        Width="Auto"
+                                        MaxWidth="543"
+                                        TextWrapping="Wrap"
+                                        Margin="3.5 0 0 0"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PassportTable.Name_Passport}"/>
+                                </StackPanel>
+                                <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock 
+                                        VerticalAlignment="Top"
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Отчество:"/>
+                                    <TextBlock
+                                        MinWidth="0"
+                                        Width="Auto"
+                                        MaxWidth="488"
+                                        TextWrapping="Wrap"
+                                        Margin="3.5 0 0 0"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PassportTable.Middlename_Passport}"/>
+                                </StackPanel>
+                                <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                                    <TextBlock 
+                                        VerticalAlignment="Top"
+                                        Margin="0 0 3.5 0"
+                                        Style="{DynamicResource MainStyleTextBlock}"
+                                        Text="Паспорт выдан:"/>
+                                    <TextBlock
+                                        Margin="3.5 0 0 0"
+                                        MinWidth="0"
+                                        Width="Auto"
+                                        MaxWidth="443"
+                                        TextWrapping="Wrap"
+                                        Style="{DynamicResource OtherStyleTextBlock}"
+                                        Text="{Binding PassportTable.Issued_Passport}"/>
+                                </StackPanel>
                                <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
                                     <TextBlock 
                                         VerticalAlignment="Top"
@@ -189,7 +204,7 @@
                                         Margin="3.5 0 0 0"
                                         MinWidth="0"
                                         Width="Auto"
-                                        MaxWidth="400"
+                                        MaxWidth="436"
                                         TextWrapping="Wrap"
                                         Style="{DynamicResource OtherStyleTextBlock}"
                                         Text="{Binding PassportTable.LocationOfBrich_Passport}"/>
