--- a/DesctopHITE/AppDateFolder/StyleFolder/ButtonDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ButtonDictionary.xaml
@@ -191,6 +191,16 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="MenuButton" TargetType="Menu">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="#a2a2a2"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Material-Design-Iconic-Font"/>
+    </Style>
     <!--#endregion-->
-    
 </ResourceDictionary>
