--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/DevelopersPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/DevelopersPage.xaml
@@ -11,47 +11,58 @@
             <RowDefinition Height="250"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel VerticalAlignment="Center">
         <TextBlock
             VerticalAlignment="Top"
             HorizontalAlignment="Left"
             Margin="20"
-            Text="Здравствуйте, если вам не обходима помощь или произошёл баг (поломка), свяжитесь с нами и мы постараемся вам помочь. Наша компания «GoodProgrammer» доступна в таких соц-сетях как: "
             Width="1200"
             Style="{DynamicResource MainStyleTextBlock}"
             TextWrapping="Wrap">
-            <Hyperlink Style="{DynamicResource Hyperlink}" x:Name="TelegramHyperlink" Click="TelegramHyperlink_Click" Foreground="#34abdf">
-                Telegram,
-            </Hyperlink>
-            <Hyperlink Style="{DynamicResource Hyperlink}" x:Name="WhatsAppHyperlink" Click="WhatsAppHyperlink_Click" Foreground="#33cf6a">
-                WhatsApp,
-            </Hyperlink>
-            <Hyperlink Style="{DynamicResource Hyperlink}" x:Name="VKHyperlink" Click="VKHyperlink_Click" Foreground="#0077ff">
-                VK
-            </Hyperlink>
+            <TextBlock 
+                TextWrapping="Wrap"
+                Text="Здравствуйте, мы «GoodProgrammer» являемся разработчиками данной автоматизированной информационной системы. Мы специально стараемся разработать дружественный и удобный для пользователя интерфейс данной автоматизированной информационной системы. Так же мы стараемся вовремя исправлять баги и ошибки в работе данной автоматизированной информационной системы. Если у вас возникли вопросы, предложения по улучшению данной автоматизированной информационной системы или вы нашли баг, то можете написать нам! Наши контакты доступны в: ">
+                <Hyperlink Style="{DynamicResource Hyperlink}" x:Name="TelegramHyperlink" Click="TelegramHyperlink_Click" Foreground="#34abdf">
+                    Telegram,
+                </Hyperlink>
+                <Hyperlink Style="{DynamicResource Hyperlink}" x:Name="WhatsAppHyperlink" Click="WhatsAppHyperlink_Click" Foreground="#33cf6a">
+                    WhatsApp,
+                </Hyperlink>
+                <Hyperlink Style="{DynamicResource Hyperlink}" x:Name="VKHyperlink" Click="VKHyperlink_Click" Foreground="#0077ff">
+                    VK
+                </Hyperlink>
+            </TextBlock>
+            <TextBlock 
+                TextWrapping="Wrap"
+                Text="(ссылки кликабельны), или же сканировать QR-code для перехода на диалог с нами. Если вам интересен код данной автоматизированной информационной системы, то можете перейти на: ">
+                <Hyperlink Style="{DynamicResource Hyperlink}" x:Name="GitHubHyperlink" Click="GitHubHyperlink_Click" Foreground="#1f6feb">
+                    GitHub
+                </Hyperlink>
+            </TextBlock>
+            <TextBlock 
+                TextWrapping="Wrap"
+                Text="для просмотра открытого исходного кода."/>
+            <TextBlock 
+                Margin="0 10 0 0"
+                TextWrapping="Wrap"
+                Text="Вы можите нажать на одну из ссылок для перехода в чат с нами, или же отсканировать QR-code для перехода в чат с нами:"/>
         </TextBlock>
-        <TextBlock
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left"
-            Margin="20"
-            Text="Вы можите нажать на одну из ссылок для перехода в чат с нами, или же отсканировать QR-code для перехода в чат с нами:"
-            Width="1200"
-            Style="{DynamicResource MainStyleTextBlock}"
-            TextWrapping="Wrap"/>
-        </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Image
-                Margin="0 0 20 0"
+                Margin="0 0 10 0"
                 Style="{StaticResource QrImage}"
                 Source="\ContentFolder\ImageFolder\TelegramQrCode.png"/>
             <Image
-                Margin="20 0 20 0"
+                Margin="10 0 10 0"
                 Style="{StaticResource QrImage}"
                 Source="\ContentFolder\ImageFolder\WhatsAppQrCode.png"/>
             <Image
-                Margin="20 0 0 0"
+                Margin="10 0 10 0"
                 Style="{StaticResource QrImage}"
                 Source="\ContentFolder\ImageFolder\VkQrCode.png"/>
+            <Image
+                Margin="10 0 0 0"
+                Style="{StaticResource QrImage}"
+                Source="\ContentFolder\ImageFolder\GitHubQrCode.png"/>
         </StackPanel>
     </Grid>
 </Page>
