--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
@@ -7,57 +7,109 @@
     mc:Ignorable="d" 
     Style="{DynamicResource BodySpacePageStyle}">
     <Grid>
-        <StackPanel Width="1311" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10 10 0 0">
-            <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
-                <TextBlock
+        <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <Border 
+            Margin="10"
+            Height="200"
+            Width="600"
+            Visibility="Visible" 
+            Style="{DynamicResource BorderInformation}">
+                <StackPanel Orientation="Vertical" Margin="10">
+                    <TextBlock
+                    Foreground="#462AD8"
+                    Text="РЕЗУЛЬТАТ"
                     Style="{DynamicResource MainStyleTextBlock}"
-                    Text="Последнее сканирование было произведено:"
-                    Margin="0 0 2 0"/>
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="15/02/2023 16:50"
-                    Margin="2 0 0 0"/>
-            </StackPanel>
-            <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="Результат сканирования:"
-                    Margin="0 0 2 0"/>
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="Отлично"
-                    Margin="2 0 0 0"/>
-            </StackPanel>
-            <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="Кем сканировалось:"
-                    Margin="0 0 2 0"/>
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="Error404 Error404 Error404 (Admin)"
-                    Margin="2 0 0 0"/>
-            </StackPanel>
-            <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="Продолжительность сканирования:"
-                    Margin="0 0 2 0"/>
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="13:42"
-                    Margin="2 0 0 0"/>
-            </StackPanel>
-            <StackPanel Margin="0 2 0 2" Orientation="Horizontal">
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="Сканирование:"
-                    Margin="0 0 2 0"/>
-                <TextBlock
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    Text="134\134"
-                    Margin="2 0 0 0"/>
-            </StackPanel>
+                    FontSize="30"
+                    Margin="0 10 0 10"/>
+                    <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="Последнее сканирование было произведено:"
+                                Margin="0 0 3.5 0"/>
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="15/02/2023 16:50"
+                                Margin="3.5 0 0 0"/>
+                        </StackPanel>
+                        <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="Результат сканирования:"
+                                Margin="0 0 2 0"/>
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="Отлично"
+                                Margin="2 0 0 0"/>
+                        </StackPanel>
+                        <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="Кем сканировалось:"
+                                Margin="0 0 2 0"/>
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="Error404 Error404 Error404 (Admin)"
+                                Margin="2 0 0 0"/>
+                        </StackPanel>
+                        <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="Продолжительность сканирования:"
+                                Margin="0 0 2 0"/>
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="13:42"
+                                Margin="2 0 0 0"/>
+                        </StackPanel>
+                        <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="Сканирование:"
+                                Margin="0 0 2 0"/>
+                            <TextBlock
+                                Style="{DynamicResource MainStyleTextBlock}"
+                                Text="134\134"
+                                Margin="2 0 0 0"/>
+                        </StackPanel>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+            <Border 
+                Margin="10"
+                Height="110"
+                Width="600"
+                Visibility="Visible" 
+                Style="{DynamicResource BorderInformation}">
+                <StackPanel Orientation="Vertical" Margin="10">
+                    <TextBlock
+                        Foreground="#462AD8"
+                        Text="Ошибки"
+                        Style="{DynamicResource MainStyleTextBlock}"
+                        FontSize="30"
+                        Margin="0 10 0 10"/>
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
+                        <TextBlock
+                            Foreground="#9a9a9a"
+                            Style="{DynamicResource MainStyleTextBlock}"
+                            Text="Ошибок не найдено"/>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+        </StackPanel>
+        <TextBlock
+            Visibility="Visible"
+            Style="{DynamicResource IconTextBlockStyle}"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Right"
+            x:Name="LoadingSpinnerTextBlock"
+            Text="&#xf3ec;"
+            FontSize="400"
+            Height="500"
+            Width="500"/>
+
+
+        <StackPanel Visibility="Collapsed" Width="1311" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10 10 0 0">
             <Button
                 Height="40"
                 Width="220"
