--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
@@ -97,28 +97,78 @@
                 </StackPanel>
             </Border>
         </StackPanel>
-        <TextBlock
-            Visibility="Visible"
-            Style="{DynamicResource IconTextBlockStyle}"
+        <Grid
+            Height="450"
+            Width="450"
             VerticalAlignment="Top"
             HorizontalAlignment="Right"
-            x:Name="LoadingSpinnerTextBlock"
-            Text="&#xf3ec;"
-            FontSize="400"
-            Height="500"
-            Width="500"/>
-
-
-        <StackPanel Visibility="Collapsed" Width="1311" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10 10 0 0">
-            <Button
+            Margin="0 30 150 0" RenderTransformOrigin="0.5,0.5">
+            <Path
+                HorizontalAlignment ="Center"
+                VerticalAlignment ="Center"
+                Stroke ="#8c8a8c"
+                StrokeThickness ="15"
+                StrokeStartLineCap ="Flat"
+                StrokeEndLineCap ="Flat"
+                StrokeDashOffset ="0"
+                Data="M 0,100 A 100,100 0 1 1 300,100 A 100,100 0 1 1 0,100"/>
+            <Path
+                x:Name="ProgressLoadingPath"
+                Opacity="0"
+                HorizontalAlignment ="Center"
+                VerticalAlignment ="Center"
+                Stroke ="#462AD8"
+                StrokeThickness ="15"
+                StrokeStartLineCap ="Flat"
+                StrokeEndLineCap ="Flat"
+                StrokeDashOffset ="0"
+                Data="M 0,100 A 100,100 0 1 1 300,100 A 100,100 0 1 1 0,100"/>
+            <ToggleButton
+                Style="{DynamicResource OtherMenuToggleButtonStyle}"
                 Height="40"
                 Width="220"
                 x:Name="TestButton"
                 Click="TestButton_Click"
                 Content="СКАНИРОВАТЬ"
-                VerticalAlignment="Top"
-                HorizontalAlignment="Right"
-                Margin="0 20 20 0"/>
-        </StackPanel>
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center"
+                Margin="20">
+                <ToggleButton.Resources>
+                    <Storyboard RepeatBehavior="Forever" x:Key="Start_Animation">
+                        <DoubleAnimation 
+                            Storyboard.TargetName="ProgressLoadingPath"
+                            Storyboard.TargetProperty="StrokeDashOffset"
+                            Duration="0:0:1"
+                            From="0"
+                            To="300"/>
+                        <DoubleAnimation 
+                            AutoReverse="True"
+                            Storyboard.TargetProperty="Opacity"
+                            Storyboard.TargetName="ProgressLoadingPath"
+                            From="0"
+                            To="1"
+                            BeginTime="0:0:0"
+                            Duration="0:0:01"/>
+                    </Storyboard>
+                    <Storyboard x:Key="Stop_Animation">
+                        <DoubleAnimation 
+                            Storyboard.TargetProperty="Opacity"
+                            Storyboard.TargetName="ProgressLoadingPath"
+                            From="1"
+                            To="0"
+                            BeginTime="0:0:0"
+                            Duration="0:0:0"/>
+                    </Storyboard>
+                </ToggleButton.Resources>
+                <ToggleButton.Triggers>
+                    <EventTrigger RoutedEvent="ToggleButton.Checked">
+                        <BeginStoryboard Storyboard="{StaticResource Start_Animation}" />
+                    </EventTrigger>
+                    <EventTrigger RoutedEvent="ToggleButton.Unchecked">
+                        <BeginStoryboard Storyboard="{StaticResource Stop_Animation}" />
+                    </EventTrigger>
+                </ToggleButton.Triggers>
+            </ToggleButton>
+        </Grid>
     </Grid>
 </Page>
