--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
@@ -16,11 +16,11 @@
             Style="{DynamicResource BorderInformation}">
                 <StackPanel Orientation="Vertical" Margin="10">
                     <TextBlock
-                    Foreground="#462AD8"
-                    Text="РЕЗУЛЬТАТ"
-                    Style="{DynamicResource MainStyleTextBlock}"
-                    FontSize="30"
-                    Margin="0 10 0 10"/>
+                        Foreground="#462AD8"
+                        Text="РЕЗУЛЬТАТ"
+                        Style="{DynamicResource MainStyleTextBlock}"
+                        FontSize="30"
+                        Margin="0 10 0 10"/>
                     <StackPanel Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                         <StackPanel Margin="0 0 0 3.5" Style="{DynamicResource HorizontalDataStackPanel}">
                             <TextBlock
@@ -103,6 +103,13 @@
             VerticalAlignment="Top"
             HorizontalAlignment="Right"
             Margin="0 30 150 0" RenderTransformOrigin="0.5,0.5">
+            <TextBlock
+                x:Name="ProgressScanTextBlock"
+                Visibility="Collapsed"
+                Foreground="#462AD8"
+                FontSize="60"
+                Margin="0 0 5 50"
+                Style="{DynamicResource MainStyleTextBlock}"/>
             <Path
                 HorizontalAlignment ="Center"
                 VerticalAlignment ="Center"
@@ -126,10 +133,10 @@
             <ToggleButton
                 Style="{DynamicResource OtherMenuToggleButtonStyle}"
                 Height="40"
-                Width="220"
+                Width="360"
                 x:Name="TestButton"
                 Click="TestButton_Click"
-                Content="СКАНИРОВАТЬ"
+                Content="Запустить сканирование системы"
                 VerticalAlignment="Bottom"
                 HorizontalAlignment="Center"
                 Margin="20">
