--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/DevelopersPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/DevelopersPage.xaml
@@ -12,6 +12,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <TextBlock
+            FontSize="20"
             VerticalAlignment="Top"
             HorizontalAlignment="Left"
             Margin="20"
